[gd_scene load_steps=64 format=3 uid="uid://dfw7tpcupxmeq"]

[ext_resource type="Texture2D" uid="uid://dd28gk2sytn4y" path="res://assets/textures/main_characters/Mask Dude/Idle (32x32).png" id="1_1dj28"]
[ext_resource type="Script" uid="uid://dn20is148oh5k" path="res://source/entity/character/player.gd" id="1_5bw4n"]
[ext_resource type="Shader" uid="uid://gh0sqdfybqhw" path="res://source/shader/2d-perspective.gdshader" id="2_wmdwy"]
[ext_resource type="AnimationLibrary" uid="uid://d2xtwkoev3qif" path="res://assets/animations/animation_mask_dude.tres" id="3_4xhno"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="4_tvgm1"]
[ext_resource type="Script" uid="uid://c1vp0ojjvaby1" path="res://addons/godot_state_charts/parallel_state.gd" id="5_5pcq2"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="5_trqsh"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="6_8y6tv"]
[ext_resource type="Script" uid="uid://488xerv8d0xh" path="res://addons/godot_state_charts/animation_tree_state.gd" id="7_3qlw1"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="8_5pcq2"]
[ext_resource type="Texture2D" uid="uid://dlnta0t1mnaw" path="res://assets/textures/main_characters/texture_main_characters_appearing.png" id="10_k3krn"]
[ext_resource type="Texture2D" uid="uid://dhfxpe5ndwjh4" path="res://assets/textures/main_characters/texture_main_characters_desappearing.png" id="11_qnaxa"]
[ext_resource type="Texture2D" uid="uid://jjiji41vp6r7" path="res://assets/textures/others/texture_other_dust_particle.png" id="12_qeo4g"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="14_wmdwy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y1hgb"]
shader = ExtResource("2_wmdwy")
shader_parameter/progress = 0.0
shader_parameter/texture_size = Vector2(64, 64)
shader_parameter/float_dist = 6.0
shader_parameter/progress_rand_range = 0.2

[sub_resource type="Curve" id="Curve_lkmau"]
_data = [Vector2(0, 0.8101636), 0.0, 0.0, 0, 0, Vector2(0.9941003, 0.043224335), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7hqdv"]
curve = SubResource("Curve_lkmau")

[sub_resource type="Curve" id="Curve_qeo4g"]
_data = [Vector2(0.026548669, 0.7646029), 0.0, 0.0, 0, 0, Vector2(1, 0.33936924), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_lkmau"]
curve = SubResource("Curve_qeo4g")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qeo4g"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(6, 1, 1)
direction = Vector3(0, 1, 0)
gravity = Vector3(0, -10, 0)
scale_curve = SubResource("CurveTexture_lkmau")
alpha_curve = SubResource("CurveTexture_7hqdv")

[sub_resource type="Curve" id="Curve_7hqdv"]
_data = [Vector2(0, 0.8101636), 0.0, 0.0, 0, 0, Vector2(0.9941003, 0.043224335), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_b86uy"]
curve = SubResource("Curve_7hqdv")

[sub_resource type="Curve" id="Curve_u0tey"]
_data = [Vector2(0.026548669, 0.7646029), 0.0, 0.0, 0, 0, Vector2(1, 0.33936924), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_rfmb8"]
curve = SubResource("Curve_u0tey")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_i8r5t"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(6, 1, 1)
direction = Vector3(0, 1, 0)
gravity = Vector3(0, -10, 0)
scale_curve = SubResource("CurveTexture_rfmb8")
alpha_curve = SubResource("CurveTexture_b86uy")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rem1l"]
size = Vector2(20, 26)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5pcq2"]
animation = &"double_jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rem1l"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4xhno"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_trqsh"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8y6tv"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_022ct"]
animation = &"run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_4xhno"]
blend_point_0/node = SubResource("AnimationNodeAnimation_trqsh")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_8y6tv")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_022ct")
blend_point_2/pos = 0.0
value_label = "velocity.y"
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k3krn"]
animation = &"wall_jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4xhno"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tvgm1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5pcq2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k3krn"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qnaxa"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qeo4g"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lkmau"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wmdwy"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rem1l"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y1hgb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_klx3h"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7r177"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_4xhno"]
states/DoubleJump/node = SubResource("AnimationNodeAnimation_5pcq2")
states/DoubleJump/position = Vector2(604, 83)
states/Hit/node = SubResource("AnimationNodeAnimation_rem1l")
states/Hit/position = Vector2(313, 210)
states/Idle/node = SubResource("AnimationNodeAnimation_4xhno")
states/Idle/position = Vector2(313, 83)
states/Move/node = SubResource("AnimationNodeBlendSpace1D_4xhno")
states/Move/position = Vector2(445, 83)
states/Start/position = Vector2(198, 83)
states/Wall/node = SubResource("AnimationNodeAnimation_k3krn")
states/Wall/position = Vector2(445, 210)
transitions = ["Idle", "Move", SubResource("AnimationNodeStateMachineTransition_4xhno"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_tvgm1"), "Move", "DoubleJump", SubResource("AnimationNodeStateMachineTransition_5pcq2"), "DoubleJump", "Move", SubResource("AnimationNodeStateMachineTransition_k3krn"), "Move", "Wall", SubResource("AnimationNodeStateMachineTransition_qnaxa"), "Wall", "Move", SubResource("AnimationNodeStateMachineTransition_qeo4g"), "DoubleJump", "Wall", SubResource("AnimationNodeStateMachineTransition_lkmau"), "Hit", "Idle", SubResource("AnimationNodeStateMachineTransition_wmdwy"), "Idle", "Hit", SubResource("AnimationNodeStateMachineTransition_rem1l"), "Move", "Hit", SubResource("AnimationNodeStateMachineTransition_y1hgb"), "Wall", "Hit", SubResource("AnimationNodeStateMachineTransition_klx3h"), "DoubleJump", "Hit", SubResource("AnimationNodeStateMachineTransition_7r177")]
graph_offset = Vector2(-21.159462, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnaxa"]
atlas = ExtResource("10_k3krn")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qeo4g"]
atlas = ExtResource("10_k3krn")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkmau"]
atlas = ExtResource("10_k3krn")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hqdv"]
atlas = ExtResource("10_k3krn")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_b86uy"]
atlas = ExtResource("10_k3krn")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0tey"]
atlas = ExtResource("10_k3krn")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfmb8"]
atlas = ExtResource("10_k3krn")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8r5t"]
atlas = ExtResource("11_qnaxa")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3svnc"]
atlas = ExtResource("11_qnaxa")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmfjv"]
atlas = ExtResource("11_qnaxa")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy1m2"]
atlas = ExtResource("11_qnaxa")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kagn3"]
atlas = ExtResource("11_qnaxa")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i25ey"]
atlas = ExtResource("11_qnaxa")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2albc"]
atlas = ExtResource("11_qnaxa")
region = Rect2(576, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_5pcq2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnaxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qeo4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkmau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hqdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b86uy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0tey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfmb8")
}],
"loop": false,
"name": &"appearing",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8r5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3svnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmfjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy1m2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kagn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i25ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2albc")
}],
"loop": false,
"name": &"desappearing",
"speed": 14.0
}]

[sub_resource type="Environment" id="Environment_lkmau"]
tonemap_exposure = 0.4
glow_enabled = true
glow_normalized = true

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 10
collision_layer = 2
collision_mask = 29
platform_floor_layers = 4294967293
platform_wall_layers = 1
safe_margin = 0.02
script = ExtResource("1_5bw4n")
speed = 140.0
jump_velocity = -260.0
wall_speed = 50.0

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_y1hgb")
texture = ExtResource("1_1dj28")
hframes = 11

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, 15)
emitting = false
amount = 16
texture = ExtResource("12_qeo4g")
process_material = SubResource("ParticleProcessMaterial_qeo4g")

[node name="ExplodeParticles" type="GPUParticles2D" parent="."]
position = Vector2(1, 14)
emitting = false
amount = 16
texture = ExtResource("12_qeo4g")
process_material = SubResource("ParticleProcessMaterial_i8r5t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3)
shape = SubResource("RectangleShape2D_rem1l")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
active = false
libraries = {
&"": ExtResource("3_4xhno")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_4xhno")
anim_player = NodePath("../AnimationPlayer")
parameters/Move/blend_position = 0.0009406805

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_5pcq2")
animation = &"appearing"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lkmau")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("4_tvgm1")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("5_5pcq2")
metadata/_custom_type_script = "uid://c1vp0ojjvaby1"

[node name="Movement" type="Node" parent="StateChart/Root"]
script = ExtResource("5_trqsh")
initial_state = NodePath("Air")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="OnHited" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("8_5pcq2")
to = NodePath("../../Animation/Hit")
event = &"hited"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Ground" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("6_8y6tv")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="OnJumped" type="Node" parent="StateChart/Root/Movement/Ground"]
script = ExtResource("8_5pcq2")
to = NodePath("../../Air/Jump")
event = &"jumped"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="OnAired" type="Node" parent="StateChart/Root/Movement/Ground"]
script = ExtResource("8_5pcq2")
to = NodePath("../../Air")
event = &"aired"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Air" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("5_trqsh")
initial_state = NodePath("Fall")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="OnGrounded" type="Node" parent="StateChart/Root/Movement/Air"]
script = ExtResource("8_5pcq2")
to = NodePath("../../Ground")
event = &"grounded"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="OnWalled" type="Node" parent="StateChart/Root/Movement/Air"]
script = ExtResource("8_5pcq2")
to = NodePath("../../../Animation/Wall")
event = &"walled"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Fall" type="Node" parent="StateChart/Root/Movement/Air"]
script = ExtResource("6_8y6tv")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="OnJump" type="Node" parent="StateChart/Root/Movement/Air/Fall"]
script = ExtResource("8_5pcq2")
to = NodePath("../../Jump")
event = &"jumped"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Jump" type="Node" parent="StateChart/Root/Movement/Air"]
script = ExtResource("6_8y6tv")
metadata/_custom_type_script = "uid://cytafq8i1y8qm"

[node name="OnJump" type="Node" parent="StateChart/Root/Movement/Air/Jump"]
script = ExtResource("8_5pcq2")
to = NodePath("../../DoubleJump")
event = &"jumped"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="DoubleJump" type="Node" parent="StateChart/Root/Movement/Air"]
script = ExtResource("7_3qlw1")
animation_tree = NodePath("../../../../../AnimationTree")
metadata/_custom_type_script = "uid://488xerv8d0xh"

[node name="OnJump" type="Node" parent="StateChart/Root/Movement/Air/DoubleJump"]
script = ExtResource("8_5pcq2")
to = NodePath("../../Jump")
event = &"jumped"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Animation" type="Node" parent="StateChart/Root"]
script = ExtResource("5_trqsh")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="Idle" type="Node" parent="StateChart/Root/Animation"]
script = ExtResource("7_3qlw1")
animation_tree = NodePath("../../../../AnimationTree")
metadata/_custom_type_script = "uid://488xerv8d0xh"

[node name="OnMoving" type="Node" parent="StateChart/Root/Animation/Idle"]
script = ExtResource("8_5pcq2")
to = NodePath("../../Move")
event = &"moving"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Move" type="Node" parent="StateChart/Root/Animation"]
script = ExtResource("7_3qlw1")
animation_tree = NodePath("../../../../AnimationTree")
metadata/_custom_type_script = "uid://488xerv8d0xh"

[node name="OnIdle" type="Node" parent="StateChart/Root/Animation/Move"]
script = ExtResource("8_5pcq2")
to = NodePath("../../Idle")
event = &"idle"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Wall" type="Node" parent="StateChart/Root/Animation"]
script = ExtResource("7_3qlw1")
animation_tree = NodePath("../../../../AnimationTree")
metadata/_custom_type_script = "uid://488xerv8d0xh"

[node name="OnGround" type="Node" parent="StateChart/Root/Animation/Wall"]
script = ExtResource("8_5pcq2")
to = NodePath("../../Idle")
event = &"grounded"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="OnMoving" type="Node" parent="StateChart/Root/Animation/Wall"]
script = ExtResource("8_5pcq2")
to = NodePath("../../Move")
event = &"moving"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="OnJump" type="Node" parent="StateChart/Root/Animation/Wall"]
script = ExtResource("8_5pcq2")
to = NodePath("../../../Movement/Air/Jump")
event = &"jumped"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="Hit" type="Node" parent="StateChart/Root/Animation"]
script = ExtResource("7_3qlw1")
animation_tree = NodePath("../../../../AnimationTree")
metadata/_custom_type_script = "uid://488xerv8d0xh"

[node name="OnHitEnd" type="Node" parent="StateChart/Root/Animation/Hit"]
script = ExtResource("8_5pcq2")
to = NodePath("../../Idle")
event = &"hit_end"
delay_in_seconds = "0.0"
metadata/_custom_type_script = "uid://cf1nsco3w0mf6"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="StateChartDebugger" parent="CanvasLayer" instance=ExtResource("14_wmdwy")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 117.0
offset_top = -120.0
offset_right = 285.0
offset_bottom = 110.0
focus_behavior_recursive = 1
initial_node_to_watch = NodePath("../../StateChart")

[connection signal="state_physics_processing" from="StateChart/Root/Movement/Ground" to="." method="_on_ground_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Air/Fall" to="." method="_on_fall_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Air/Jump" to="." method="_on_jump_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Air/DoubleJump" to="." method="_on_double_jump_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Animation/Wall" to="." method="_on_wall_state_physics_processing"]
